2007-07-30  Satoshi Nakagawa <artension@gmail.com>

	Added url menu.

2007-07-29  Satoshi Nakagawa <artension@gmail.com>

	Added settings for Growl notifications.

2007-07-29  Satoshi Nakagawa <artension@gmail.com>

	Added regexp escape to highlight words.

2007-07-29  Satoshi Nakagawa <artension@gmail.com>

	Added Growl notifications.
	Added message length check for quick join.

2007-07-28  Satoshi Nakagawa <artension@gmail.com>

	Released 0.8.
	Fixed a bug, checkboxes on dialogs are always stored as true.

2007-07-27  Satoshi Nakagawa <artension@gmail.com>

	Released 0.7.
	Fixed a bug, LimeChat.app won't start up at the first time.
	Tweaked preferences dialog.

2007-07-27  Satoshi Nakagawa <artension@gmail.com>

	Implemented Growl notifier module.

2007-07-27  Satoshi Nakagawa <artension@gmail.com>

	Implementing Growl notifications.

2007-07-25  Satoshi Nakagawa <artension@gmail.com>

	Added a short cut key, alt+space to go to next unread channel.
	Added a short cut key, alt+shift+space to go to previous unread channel.

2007-07-25  Satoshi Nakagawa <artension@gmail.com>

	Added an option, no action when pushed tab key.

2007-07-25  Satoshi Nakagawa <artension@gmail.com>

	Added workaround for WebKit on Leopard.

2007-07-25  Satoshi Nakagawa <artension@gmail.com>

	Released 0.6.
	Fixed a bug, NSPopupButton should be stored as int.
	Fixed a bug, address detection method maybe not applied sometimes.

2007-07-24  Satoshi Nakagawa <artension@gmail.com>

	Changed captions on general tab, peferences dialog.

2007-07-24  Satoshi Nakagawa <artension@gmail.com>

	Added nick completion settings to preferences dialog.
	Added ib_mapped_radio_outlet to DialogHelper.

2007-07-24  Satoshi Nakagawa <artension@gmail.com>

	Implemented nick completion.
	Added NSRange utility functions.

2007-07-24  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, channel members go missing in the member list when they change their nicks to identical ones.
